이미지 인식 알람 스크린 오프상태에서도 팝업되게 이중 소리알람 해결

--- a/app/src/main/res/layout/information.xml
+++ b/app/src/main/res/layout/information.xml
@@ -15,7 +15,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="155dp"
-        android:gravity="right"
+        android:gravity="center"
         android:src="@drawable/cupinhand" />
 
 </LinearLayout>
